Remove DCHECK of update_in_progress_ in jumplist

Bug: 750880
Cq-Include-Trybots: master.tryserver.chromium.win:win10_chromium_x64_rel_ng
Change-Id: Id1a064e89886cd31f2619f232cd3f4657f3f3961